logs.log
  File "imgCap.py", line 12
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
Reinitialized existing Git repository in /home/pi/Documents/VegetableImages/.git/
